# RL-Quadcopter

./: .gitignore  README.md
.github/workflows/: manual.yml
quad_controller_rl/: CMakeLists.txt  package.xml
quad_controller_rl/cfg/: rl_controller_params.cfg
quad_controller_rl/config/: rl_controller_config.yaml
quad_controller_rl/launch/: rl_controller.launch
quad_controller_rl/notebooks/: RL-Quadcopter.ipynb
quad_controller_rl/scripts/: drone_sim  rl_controller_node  sim.py
quad_controller_rl/src/quad_controller_rl/: rl_agent.py  rl_controller.py
quad_controller_rl/src/quad_controller_rl/agents/: policy_search.py
quad_controller_rl/src/quad_controller_rl/tasks/: takeoff.py
